--- a/1.md
+++ b/1.md
@@ -223,14 +223,19 @@ hhh
 <span style="color: black"> 27 December</span>
 <span style="color: red"> last month of 2024</span>
 <span p="color: red"> last month of 2024</span>
-<span style="bgcolor: red"> last month of 2024</span>
 
 
 
 Valid Inject key
 <inject key="AzureAdUserEmail" defaultvalue="anupam@example.com">
 
-<inject key="**AzureAdUserEmail**" defaultvalue="anupam@example.com">
+<inject key="**AzureAdUserEmail**" defaultvalue="suman@example.com">
 ```
 Invalid Inject key to check default value 
 <inject key="Sample" defaultvalue="anupam@example.com">
+
+
+To add params as in paragraph 
+>AzureAdUserEmail :** <inject key="AzureAdUserEmail"/>**
+>AzureAdUserPassword :** <inject key="AzureAdUserPassword"/>**
+>
