--- a/1.md
+++ b/1.md
@@ -238,4 +238,8 @@ Invalid Inject key to check default value
 To add params as in paragraph 
 >AzureAdUserEmail :** <inject key="AzureAdUserEmail"/>**
 >AzureAdUserPassword :** <inject key="AzureAdUserPassword"/>**
->
+
+Inject Key without key value 
+<inject key="" defaultvalue="AnupamSingh.com">
+<inject key="AzureAdUserEmail" defaultvalue="AnupamSingh.com">
+```
