--- a/1.md
+++ b/1.md
@@ -245,4 +245,7 @@ Inject Key without key value
 ```
 
 gifnew
+![ClipWindowsGIF](https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExd2VrbnR5ZnZzczczdjhnbGR6azZtaHkwbmR4ZWJibDVpYTltZndsbyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Y3NWfcC00m1Zp0lc2T/giphy.webp)
+
+gif
 >   ![ClipWindowsGIF](https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExd2VrbnR5ZnZzczczdjhnbGR6azZtaHkwbmR4ZWJibDVpYTltZndsbyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Y3NWfcC00m1Zp0lc2T/giphy.webp)
