--- a/1.md
+++ b/1.md
@@ -128,7 +128,15 @@ Invalid Inject key to check default value
 ```
 
 -------------
+-----------------divya section --------------------------------------- 
 
+<span style="color: green"> Friday</span>
+<span style="color: Blue"> tes </span>
+<span style="color: Yellow"> on </span>
+<span style="color: Pink"> without </span>
+<span style="color: black"> 27 December</span>
+<span style="color: red"> last month of 2024</span>
+<span p="color: red"> last month of 2024</span>
 ```
 Valid Inject key divya 
 <inject key="AzureAdUserEmail" defaultvalue="Divya@example.com">
