--- a/1.md
+++ b/1.md
@@ -257,4 +257,6 @@ gifnew
 
 gif
 >   ![ClipWindowsGIF](https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExd2VrbnR5ZnZzczczdjhnbGR6azZtaHkwbmR4ZWJibDVpYTltZndsbyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Y3NWfcC00m1Zp0lc2T/giphy.webp)
-Divyashree CR 
+Divyashree CR
+
+************* Anupam's Area 03 FeB*********************
