--- a/1.md
+++ b/1.md
@@ -252,3 +252,11 @@ Inject Key without key value
 <inject key="AzureAdUserEmail" defaultvalue="AnupamSingh.com">
 ```
 ************* Anupam's Area 03 FeB*********************
+Color Your Eye Test
+
+<span style="color: green"> Monday </span>
+<span style="color: Blue"> tMonday </span>
+<span style="color: Yellow"> oMonday </span>
+<span style="color: Pink"> wMonday/span>
+<span style="color: black"> 0Monday</span>
+<span style="color: blck"> lMonday</span>
