--- a/1.md
+++ b/1.md
@@ -253,10 +253,14 @@ Inject Key without key value
 
 ************* Anupam's Area 03 FeB*********************
 Color Your Eye Test
-
 <span style="color: green"> Monday </span>
 <span style="color: Blue"> tMonday </span>
 <span style="color: Yellow"> oMonday </span>
 <span style="color: Pink"> wMonday/span>
 <span style="color: black"> 0Monday</span>
-<span style="color: blck"> lMonday</span>
+<span style="color: navy"> lMonday</span>
+
+new color
+<span style="color: Orange"> lMonday</span>
+<span style="color: DarkSalmon"> lMonday</span>
+<span style="color: Brown"> lMonday</span>
