--- a/1.md
+++ b/1.md
@@ -264,3 +264,11 @@ new color
 <span style="color: Orange"> lMonday</span>
 <span style="color: DarkSalmon"> lMonday</span>
 <span style="color: Brown"> lMonday</span>
+
+
+Valid Inject key
+<inject key="AzureAdUserEmail" defaultvalue="anupam@example.com">
+<inject key="**AzureAdUserEmail**" defaultvalue="suman@example.com">
+```
+Invalid Inject key to check default value 
+<inject key="Sample" defaultvalue="new@gmail.com">
