--- a/1.md
+++ b/1.md
@@ -265,6 +265,12 @@ new color
 <span style="color: DarkSalmon"> lMonday</span>
 <span style="color: Brown"> lMonday</span>
 
+Tried with some diff color0302
+<span style="color: light pink">One</span>
+<span style="color: dark yellow">Two</span>
+<span style="color: New">Three</span>
+
+
 
 Valid Inject key
 <inject key="AzureAdUserEmail" defaultvalue="anupam@example.com">
