--- a/1.md
+++ b/1.md
@@ -278,3 +278,11 @@ Valid Inject key
 
 Invalid Inject key to check default value 
 <inject key="Sample" defaultvalue="new@gmail.com">
+
+```
+Valid Inject key
+<inject key="AzureAdUserEmail" defaultvalue="anupam@example.com">
+
+```
+Invalid
+<inject key="**AzureAdUserEmail**" defaultvalue="suman@example.com">
