--- a/1.md
+++ b/1.md
@@ -287,3 +287,7 @@ Valid Inject key
 ```
 Invalid
 <inject key="**AzureAdUserEmail**" defaultvalue="suman@example.com">
+
+To add params as in paragraph 
+>AzureAdUserEmail :** <inject key="AzureAdUserEmail"/>**
+>AzureAdUserPassword :** <inject key="AzureAdUserPassword"/>**
