--- a/1.md
+++ b/1.md
@@ -305,3 +305,5 @@ https://www.shutterstock.com/image-illustration/3d-rendering-illustation-today-w
 
 
 
+>   ![ClipWindowsGIF](https://github.com/bonzz/testguide/assets/76195593/5a83c32d-1e47-4eb2-897a-ffa18ed816a2)
+
