--- a/1.md
+++ b/1.md
@@ -308,3 +308,29 @@ https://www.shutterstock.com/image-illustration/3d-rendering-illustation-today-w
 >   ![ClipWindowsGIF](https://github.com/bonzz/testguide/assets/76195593/5a83c32d-1e47-4eb2-897a-ffa18ed816a2)
 >https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExeDFwNGY1eDdwMDJlOGp3bXZhNHg2cjFoejl2ZXhnZTBkdW40aDRlMiZlcD12MV9naWZzX3RyZW5kaW5nJmN0PWc/fUQ4rhUZJYiQsas6WD/200.webp
 
+
+
+
+SSS
+
+
+Enable Copy - True -----------------
+
+* **checkNNumber:** <inject key="AzureAdUserEmail" value="StaticValue2" key="AzureAdUserPassword" value="StaticValue1" 
+    enableCopy="true" />
+
+Enable Copy - False -----------------
+
+* **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue4" key="AzureAdUserEmail" enableCopy="false" />
+
+
+<span style="color: green"> Friday</span>
+<span style="color: Blue"> tes </span>
+<span style="color: Yellow"> on </span>
+<span style="color: Pink"> without </span>
+<span style="color: black"> 27 December</span>
+<span style="color: red"> last month of 2024</span>
+<span p="color: red"> last month of 2024</span>
+
+
+<inject key="AzureAdUserEmail" defaultvalue="example@example.com">
