--- a/1.md
+++ b/1.md
@@ -1,7 +1,10 @@
 # Module 2: Data Insights - QA
 
 # Exercise 1: Getting Started with Azure 
+
 Duration: 10 mins
+<h2> Image with link</h2>
+<img src= "https://spektrasystems.com/wp-content/uploads/2021/02/IMG_5288-1024x683-2-600x600.jpg" width="300" height="300">
 
 ## Overview 
 
