--- a/1.md
+++ b/1.md
@@ -8,7 +8,7 @@ Duration: 10 mins
 <img src="https://spektrasystems.com/wp-content/uploads/2021/02/WhatsApp-Image-2019-05-21-at-6.18.34-AM-600x600.jpeg" width="300" height=300">
 
 <h2> Image with link</h2>
-<img src="https://spektrasystems.com/wp-content/uploads/2021/02/20748047_909553532535214_5011335614256117284_o-1024x768-2-600x600.jpg width = "500" height ="500">
+<img src="https://spektrasystems.com/wp-content/uploads/2021/02/20748047_909553532535214_5011335614256117284_o-1024x768-2-600x600.jpg" width = "500" height ="500">
 
 
 ## Overview 
