--- a/1.md
+++ b/1.md
@@ -342,3 +342,12 @@ Enable Copy - False -----------------
 
 
 <inject key="AzureAdUserEmail" defaultvalue="example@example.com">
+<inject key="AzureAdUserEmail" defaultvalue >
+<inject key="" defaultvalue="example@example.com">
+<inject key="AzureAdEmail" defaultvalue="example@example.com">
+
+
+<h3> Image with link</h3>
+<img src="https://spektrasystems.com/wp-content/uploads/2021/02/20748047_909553532535214_5011335614256117284_o-1024x768-2-600x600.jpg" width = "100" height ="100">
+
+
