--- a/1.md
+++ b/1.md
@@ -346,8 +346,22 @@ Enable Copy - False -----------------
 <inject key="" defaultvalue="example@example.com">
 <inject key="AzureAdEmail" defaultvalue="example@example.com">
 
+**SSS -Image with Https link using Img src syntax**
+<h4> SSS -Image with Https link using Img src syntax</h4>
+<img src="https://spektrasystems.com/wp-content/uploads/2021/02/20748047_909553532535214_5011335614256117284_o-1024x768-2-600x600.jpg" width = "100" height ="500">
 
-<h3> Image with link</h3>
-<img src="https://spektrasystems.com/wp-content/uploads/2021/02/20748047_909553532535214_5011335614256117284_o-1024x768-2-600x600.jpg" width = "100" height ="100">
+**SSS -Image with local link using Img src syntax**
+>   ![ClipWindowsGIF](https://github.com/bonzz/testguide/assets/76195593/5a83c32d-1e47-4eb2-897a-ffa18ed816a2)
 
-second attempt
+**SSS -Double Images with Https link using Img src syntax**
+<img src= "https://spektrasystems.com/wp-content/uploads/2021/02/WhatsApp-Image-2019-05-21-at-6.18.34-AM-600x600.jpeg" width = "300" height = "200">
+<img src="https://spektrasystems.com/wp-content/uploads/2021/02/20748047_909553532535214_5011335614256117284_o-1024x768-2-600x600.jpg" width = "100" height ="500">
+
+**Add HTTPS link Directly** ::::
+https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.istockphoto.com%2Fphotos%2Fnature&psig=AOvVaw06TzaQHiuxybkRlLJLvfxo&ust=1739343936597000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCMiox56Hu4sDFQAAAAAdAAAAABAE
+
+
+
+
+
+
