--- a/1.md
+++ b/1.md
@@ -359,7 +359,7 @@ Enable Copy - False -----------------
 
 <img src="https://spektrasystems.com/wp-content/uploads/2021/02/20748047_909553532535214_5011335614256117284_o-1024x768-2-600x600.jpg" width = "100" height ="500">
 
-**Add HTTPS link Directly in a code block** ::::
+**Add HTTPS link Directly in a code block**  :
 
 ```
 https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.istockphoto.com%2Fphotos%2Fnature&psig=AOvVaw06TzaQHiuxybkRlLJLvfxo&ust=1739343936597000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCMiox56Hu4sDFQAAAAAdAAAAABAE
