--- a/1.md
+++ b/1.md
@@ -190,6 +190,21 @@ This is the Default value which is very long This is the Default value which is 
 This is the Default value which is very long This is the Default value which is very long
 This is the Default value which is very long This is the Default value which is very long">
 ```
+APNG Image 
+ 
+(https://www.google.com/url?sa=i&url=https%3A%2F%2Fblogs.mathworks.com%2Fsteve%2F2019%2F12%2F20%2Fhow-to-write-animated-png-apng-files-from-matlab%2F&psig=AOvVaw1v8Hxx7g5VOAv_NXdBqKUh&ust=1739428535511000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCIjWx8nCvYsDFQAAAAAdAAAAABAE)
+ 
+GIF image 
+ 
+https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSNPzH2jk_R9-CMeZS0z_x8VHViCBzvCITRA5IKKULNQ-IHTCo7qcAoh6E&s
+ 
+JPEG image
+ 
+https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSGbdYDaBIKUE5MjF7kTXSJUsOykuk0qu8JNTnpk-EmTRACBIhRH2wHfgg&s
+ 
+PNG image 
+ 
+https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRayuxKBSE_Qtcc2rFHLjTuX5ZEulKBjZY-Tzr4AnzC34PSVe-H8jl9Z6I&s
 ---------------------------------------------------------------------
 -----------------Anupam Area---------------------------------------
 ```
