--- a/1.md
+++ b/1.md
@@ -196,7 +196,8 @@ APNG Image
  
 GIF image 
  
-https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSNPzH2jk_R9-CMeZS0z_x8VHViCBzvCITRA5IKKULNQ-IHTCo7qcAoh6E&s
+![image](https://github.com/user-attachments/assets/5e353c89-ab10-4c74-96be-709fff5846a5)
+
  
 JPEG image
  
