--- a/1.md
+++ b/1.md
@@ -181,6 +181,11 @@ Inject key with numbers and negative value
 ```
 
 ```
+Code block with link
+<https://portal-qa.cloudlabs.ai/>
+```
+
+```
 Inject Key with long default name  
 <inject key="AzureAdUserEmail" defaultvalue="This is the Default value which is very long
 This is the Default value which is very long This is the Default value which is very long
@@ -192,7 +197,8 @@ This is the Default value which is very long This is the Default value which is 
 ```
 APNG Image 
  
-(https://www.google.com/url?sa=i&url=https%3A%2F%2Fblogs.mathworks.com%2Fsteve%2F2019%2F12%2F20%2Fhow-to-write-animated-png-apng-files-from-matlab%2F&psig=AOvVaw1v8Hxx7g5VOAv_NXdBqKUh&ust=1739428535511000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCIjWx8nCvYsDFQAAAAAdAAAAABAE)
+![image](https://github.com/user-attachments/assets/e2502bf7-52d5-4b39-b47b-a77fbecc4ed2)
+
  
 GIF image 
  
@@ -205,7 +211,8 @@ https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSGbdYDaBIKUE5MjF7kTXSJUsOy
  
 PNG image 
  
-https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRayuxKBSE_Qtcc2rFHLjTuX5ZEulKBjZY-Tzr4AnzC34PSVe-H8jl9Z6I&s
+![image](https://github.com/user-attachments/assets/77088ac2-86be-4ccf-bc52-f0a40b14add2)
+
 ---------------------------------------------------------------------
 -----------------Anupam Area---------------------------------------
 ```
