--- a/1.md
+++ b/1.md
@@ -182,7 +182,7 @@ Inject key with numbers and negative value
 
 ```
 Code block with link
-<https://portal-qa.cloudlabs.ai/>
+<inject key="AzureAdUserEmail" defaultvalue="https://portal-qa.cloudlabs.ai/">
 ```
 
 ```
