--- a/1.md
+++ b/1.md
@@ -388,6 +388,23 @@ Enable Copy - False -----------------
 https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.istockphoto.com%2Fphotos%2Fnature&psig=AOvVaw06TzaQHiuxybkRlLJLvfxo&ust=1739343936597000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCMiox56Hu4sDFQAAAAAdAAAAABAE
 ```
 
+**OutputParams and Inject Keys check Priya**
+Valid Key and Value
+<inject key="azureemailid" defaultvalue="example@example.com">
+
+Valid Key and no value
+<inject key="azureemailid" defaultvalue="">
+
+No Key and Valid Value
+<inject key="" defaultvalue="example@example.com">
+
+No key and No Value
+<inject key="" defaultvalue="">
+
+Invalid Key and Valid value
+<inject key="azureemail" defaultvalue="example@example.com">
+
+
 
 
 
