--- a/1.md
+++ b/1.md
@@ -391,8 +391,14 @@ https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.istockphoto.com%2Fphotos%2
 **OutputParams and Inject Keys check Priya**
 Valid Key and Value
 ```
-<inject key="azureemailid" defaultvalue="example@example.com">
+<inject key="AzureAdUserPassword" defaultvalue="example@example.com">
+<inject key="azureemailid" defaultvalue="">
+<inject key="AzureAdUserEmail" defaultvalue="">
+<inject key="" defaultvalue="sample@123.com">
+<inject key="AzureAdUserPassword" defaultvalue="uodq56AEV*17">
+<inject key="AzureAdUserPassword1" defaultvalue="checking paragraph for default value">
 ```
+
 Valid Key and no value
 ```
 <inject key="azureemailid" defaultvalue="">
