--- a/1.md
+++ b/1.md
@@ -414,12 +414,16 @@ Invalid Key and Valid value
 ```
 <inject key="azureemail" defaultvalue="example@example.com">
 ```
+PNG Image - Not Working
 https://www.google.com/imgres?q=png%20image&imgurl=https%3A%2F%2Fimages.rawpixel.com%2Fimage_png_800%2FczNmcy1wcml2YXRlL3Jhd3BpeGVsX2ltYWdlcy93ZWJzaXRlX2NvbnRlbnQvam9iNjgwLTE2Ni1wLWwxZGJ1cTN2LnBuZw.png&imgrefurl=https%3A%2F%2Fwww.rawpixel.com%2Fsearch%2Fpng%2520free&docid=R6Z5SPd2yqMCOM&tbnid=F217Z2M-7t3g6M&vet=12ahUKEwitlt_BxN6LAxX7k1YBHVAfNkwQM3oECFwQAA..i&w=800&h=800&hcb=2&ved=2ahUKEwitlt_BxN6LAxX7k1YBHVAfNkwQM3oECFwQAA
 
 ![ClipWindowsGIF](https://github.com/bonzz/testguide/assets/76195593/5a83c32d-1e47-4eb2-897a-ffa18ed816a2)
 
+JPG Image - Not Working
 https://www.google.com/imgres?q=jpg%20image&imgurl=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2Fthumb%2Fb%2Fb5%2FLion_d%2527Afrique.jpg%2F1879px-Lion_d%2527Afrique.jpg&imgrefurl=https%3A%2F%2Fcommons.wikimedia.org%2Fwiki%2FFile%3ALion_d%2527Afrique.jpg&docid=hcULkKQpdK1f0M&tbnid=5VhCWe-GReAMZM&vet=12ahUKEwi2_IGTxd6LAxXgglYBHXd4E00QM3oECHYQAA..i&w=1879&h=2048&hcb=2&ved=2ahUKEwi2_IGTxd6LAxXgglYBHXd4E00QM3oECHYQAA
 
+PEXEL Images
+![ClipWindowsGIF](https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pexels.com%2Fsearch%2Ffree%2F&psig=AOvVaw3GXmhjeFvH7d88jrKf425D&ust=1740563404888000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCNi51arG3osDFQAAAAAdAAAAABAE)
 
 
 
