--- a/1.md
+++ b/1.md
@@ -428,6 +428,10 @@ PEXEL Images
 ![image](https://github.com/user-attachments/assets/06fb8a60-d1dd-4243-a7e3-1da641cb3dee)
 ![video](https://videos.pexels.com/video-files/2098989/2098989-uhd_2560_1440_30fps.mp4)
 
-🐘🐧
+Emoji test - 🐘🐧
 
-
+Color test
+<span style="color: green"> QA Test </span>
+<span style="color: pink"> <h1>QA Test </h1></span>
+<span style="color: yellow"> QA Test </span>
+<span style="color: Red"> <h6>QA Test</h6> </span>
