--- a/1.md
+++ b/1.md
@@ -425,6 +425,8 @@ https://www.google.com/imgres?q=jpg%20image&imgurl=https%3A%2F%2Fupload.wikimedi
 PEXEL Images
 ![ClipWindowsGIF](https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pexels.com%2Fsearch%2Ffree%2F&psig=AOvVaw3GXmhjeFvH7d88jrKf425D&ust=1740563404888000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCNi51arG3osDFQAAAAAdAAAAABAE)
 
+![ClipWindowsGIF](https://giphy.com/gifs/tv2norge-dance-celebration-birthday-duNowzaVje6Di3hnOu)
+
 ![image](https://github.com/user-attachments/assets/06fb8a60-d1dd-4243-a7e3-1da641cb3dee)
 ![video](https://videos.pexels.com/video-files/2098989/2098989-uhd_2560_1440_30fps.mp4)
 ![video](https://www.youtube.com/watch?v=6ysKXydT8xY&pp=ygUKY29vbCBtdXNpYw%3D%3D)
