--- a/1.md
+++ b/1.md
@@ -434,6 +434,8 @@ Emoji test - 🐘🐧
 
 Color test
 <span style="color: green"> QA Test </span>
-<span style="color: pink"> <h1>QA Test </h1></span>
+ <h1>QA Test </h1>
 <span style="color: yellow"> QA Test </span>
-<span style="color: Red"> <h6>QA Test</h6> </span>
+<span style="color: Pink"> QA Test </span>
+<span style="color: red"> QA Test </span>
+<h6>QA Test</h6>
