--- a/1.md
+++ b/1.md
@@ -414,6 +414,9 @@ Invalid Key and Valid value
 ```
 <inject key="azureemail" defaultvalue="example@example.com">
 ```
+>AzureAdUserEmail :** <inject key="AzureAdUserEmail"/>**
+>AzureAdUserPassword :** <inject key="AzureAdUserPassword"/>**
+
 PNG Image - Not Working
 https://www.google.com/imgres?q=png%20image&imgurl=https%3A%2F%2Fimages.rawpixel.com%2Fimage_png_800%2FczNmcy1wcml2YXRlL3Jhd3BpeGVsX2ltYWdlcy93ZWJzaXRlX2NvbnRlbnQvam9iNjgwLTE2Ni1wLWwxZGJ1cTN2LnBuZw.png&imgrefurl=https%3A%2F%2Fwww.rawpixel.com%2Fsearch%2Fpng%2520free&docid=R6Z5SPd2yqMCOM&tbnid=F217Z2M-7t3g6M&vet=12ahUKEwitlt_BxN6LAxX7k1YBHVAfNkwQM3oECFwQAA..i&w=800&h=800&hcb=2&ved=2ahUKEwitlt_BxN6LAxX7k1YBHVAfNkwQM3oECFwQAA
 
