--- a/1.md
+++ b/1.md
@@ -434,6 +434,8 @@ https://giphy.com/gifs/tv2norge-dance-celebration-birthday-duNowzaVje6Di3hnOu
 ![image](https://github.com/user-attachments/assets/06fb8a60-d1dd-4243-a7e3-1da641cb3dee)
 ![video](https://videos.pexels.com/video-files/2098989/2098989-uhd_2560_1440_30fps.mp4)
 ![video](https://www.youtube.com/watch?v=6ysKXydT8xY&pp=ygUKY29vbCBtdXNpYw%3D%3D)
+
+[![Watch the video](https://img.youtube.com/vi/T-D1KVIuvjA/maxresdefault.jpg)](https://youtu.be/T-D1KVIuvjA)
 Emoji test - 🐘🐧
 
 Color test
