--- a/1.md
+++ b/1.md
@@ -436,6 +436,7 @@ https://giphy.com/gifs/tv2norge-dance-celebration-birthday-duNowzaVje6Di3hnOu
 ![video](https://www.youtube.com/watch?v=6ysKXydT8xY&pp=ygUKY29vbCBtdXNpYw%3D%3D)
 
 [![Watch the video](https://img.youtube.com/vi/T-D1KVIuvjA/maxresdefault.jpg)](https://youtu.be/T-D1KVIuvjA)
+[![Watch the video](https://i.sstatic.net/Vp2cE.png)](https://youtu.be/vt5fpE0bzSY)
 Emoji test - 🐘🐧
 
 Color test
