--- a/1.md
+++ b/1.md
@@ -1,4 +1,4 @@
-# Module 2: Data Insights - QA
+![image](https://github.com/user-attachments/assets/163bbe69-3fa2-4c53-8f10-ee2924ac5814)# Module 2: Data Insights - QA
 
 # Exercise 1: Getting Started with Azure 
 
@@ -432,8 +432,8 @@ https://giphy.com/gifs/tv2norge-dance-celebration-birthday-duNowzaVje6Di3hnOu
 >https://videos.pexels.com/video-files/2098989/2098989-uhd_2560_1440_30fps.mp4
 
 ![image](https://github.com/user-attachments/assets/06fb8a60-d1dd-4243-a7e3-1da641cb3dee)
-![video](https://videos.pexels.com/video-files/2098989/2098989-uhd_2560_1440_30fps.mp4)
-![video](https://www.youtube.com/watch?v=6ysKXydT8xY&pp=ygUKY29vbCBtdXNpYw%3D%3D)
+
+<iframe width="640" height="360" src="https://videos.pexels.com/video-files/2098989/2098989-uhd_2560_1440_30fps.mp4" title="ROOFTOP LOUNGE - Cool Music" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 [![Watch the video](https://img.youtube.com/vi/T-D1KVIuvjA/maxresdefault.jpg)](https://youtu.be/T-D1KVIuvjA)
 
