--- a/1.md
+++ b/1.md
@@ -1,4 +1,4 @@
-![image](https://github.com/user-attachments/assets/163bbe69-3fa2-4c53-8f10-ee2924ac5814)# Module 2: Data Insights - QA
+# Module 2: Data Insights - QA
 
 # Exercise 1: Getting Started with Azure 
 
