--- a/1.md
+++ b/1.md
@@ -207,7 +207,7 @@ GIF image
  
 JPEG image
  
-https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSGbdYDaBIKUE5MjF7kTXSJUsOykuk0qu8JNTnpk-EmTRACBIhRH2wHfgg&s
+![image](https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSGbdYDaBIKUE5MjF7kTXSJUsOykuk0qu8JNTnpk-EmTRACBIhRH2wHfgg&s)
  
 PNG image 
  
