--- a/1.md
+++ b/1.md
@@ -409,7 +409,7 @@ Valid Key and no value
 ```
 No Key and Valid Value
 ```
-<inject key="" defaultvalue="Labvm Admin Password">
+<inject key="" defaultvalue="Labvm Admin Password" enableCopy="false">
 ```
 No key and No Value
 ```
@@ -417,7 +417,7 @@ No key and No Value
 ```
 Invalid Key and Valid value
 ```
-<inject key="azureemail" defaultvalue="example@example.com">
+<inject key="azureemail" enableCopy="false" defaultvalue="example@example.com">
 ```
 >AzureAdUserEmail :** <inject key="AzureAdUserEmail"/>**
 >AzureAdUserPassword :** <inject key="AzureAdUserPassword"/>**
