--- a/1.md
+++ b/1.md
@@ -420,15 +420,14 @@ Invalid Key and Valid value
 <inject key="azureemail" enableCopy="false" defaultvalue="example@example.com">
 ```
 >AzureAdUserEmail :** <inject key="AzureAdUserEmail"/>**
->AzureAdUserPassword :** <inject key="AzureAdUserPassword"/>**
+>AzureAdUserPassword :** <inject enableCopy="false" key="AzureAdUserPassword"/>**
 
 PNG Image - Not Working
 
 ![ClipWindowsGIF](https://github.com/bonzz/testguide/assets/76195593/5a83c32d-1e47-4eb2-897a-ffa18ed816a2)
 
 JPG Image - Not Working
-
-PEXEL Images
+PEXEL Images - NOT Working
 ![ClipWindowsGIF](https://giphy.com/gifs/tv2norge-dance-celebration-birthday-duNowzaVje6Di3hnOu)
 https://giphy.com/gifs/tv2norge-dance-celebration-birthday-duNowzaVje6Di3hnOu
 
