--- a/1.md
+++ b/1.md
@@ -409,7 +409,7 @@ Valid Key and no value
 ```
 No Key and Valid Value
 ```
-<inject key="" defaultvalue="Labvm Admin Password" enableCopy="false">
+<inject key="" defaultvalue="Labvm Admin Password" enableCopy="false"/>
 ```
 No key and No Value
 ```
