--- a/1.md
+++ b/1.md
@@ -397,7 +397,7 @@ https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.istockphoto.com%2Fphotos%2
 Valid Key and Value
 ```
 <inject key="AzureAdUserPassword" defaultvalue="example@example.com">
-<inject key="AzureAdUserEmail" defaultvalue="">
+<inject key="AzureAdUserEmail" defaultvalue="" style="color: yellow">
 <inject key="" defaultvalue="sample@123.com">
 <inject key="AzureAdUserPassword" defaultvalue="uodq56AEV*17">
 <inject key="AzureAdUserPassword1" defaultvalue="checking paragraph for default value">
@@ -419,7 +419,7 @@ Invalid Key and Valid value
 ```
 <inject key="azureemail" enableCopy="false" defaultvalue="example@example.com">
 ```
->AzureAdUserEmail :** <inject key="AzureAdUserEmail"/>**
+>AzureAdUserEmail :** <inject style="color: yellow" key="AzureAdUserEmail"/>**
 >AzureAdUserPassword :** <inject enableCopy="false" key="AzureAdUserPassword"/>**
 
 PNG Image - Not Working
