--- a/1.md
+++ b/1.md
@@ -424,6 +424,8 @@ Invalid Key and Valid value
 >AzureAdUserEmail :** <inject style="color: yellow" key="AzureAdUserEmail"/>**
 >AzureAdUserPassword :** <inject enableCopy="false" key="AzureAdUserPassword"/>**
 
+[Link Text](apple)
+
 PNG Image - Not Working
 
 ![ClipWindowsGIF](https://github.com/bonzz/testguide/assets/76195593/5a83c32d-1e47-4eb2-897a-ffa18ed816a2)
