--- a/1.md
+++ b/1.md
@@ -397,12 +397,12 @@ https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.istockphoto.com%2Fphotos%2
 Valid Key and Value
 ```
 <inject key="AzureAdUserPassword" defaultvalue="example@example.com">
-<inject key="AzureAdUserEmail" defaultvalue="" style="color: yellow">
+<inject key="AzureAdUserEmail" defaultvalue="">
 <inject key="" defaultvalue="sample@123.com">
 <inject key="AzureAdUserPassword" defaultvalue="uodq56AEV*17" >
 ```
 ```
-<inject key="AzureAdUserPassword1" defaultvalue="checking paragraph for default value" enableCopy="false">
+<inject key="AzureAdUserPassword1" defaultvalue="checking paragraph for default value"  style="color: yellow">
 ```
 
 Valid Key and no value
