--- a/1.md
+++ b/1.md
@@ -421,10 +421,12 @@ Invalid Key and Valid value
 ```
 <inject key="azureemail" enableCopy="false" defaultvalue="example@example.com">
 ```
->AzureAdUserEmail :** <inject style="color: yellow" key="AzureAdUserEmail"/>**
+>AzureAdUserEmail :** <inject style="color: Red" key="AzureAdUserEmail"/>**
 >AzureAdUserPassword :** <inject enableCopy="false" key="AzureAdUserPassword"/>**
 
-[Link Text](apple)
+**Test Links and Hyperlinks**
+[Link Text](https://example.com/)
+
 
 PNG Image - Not Working
 
