--- a/2.md
+++ b/2.md
@@ -1,2 +1,16 @@
-Inject Key 
-<inject key="azureemailid" defaultvalue="example@example.com">
+# heading levels
+## heading levels 2
+
+** Bold Text **
+_Italic text_
+~~stricke text~~
+One <sub>subscript</sub>
+One <sup>superscript</sup>
+<ins>underlined</ins>
+>This is a quoted text (Reffered as note)
+
+Text with link:</br>
+Login to [Microsoft Azure](https://portal.azure.com/). You can perform all actions.
+
+Image test:
+![Alernate name for image](https://myoctocat.com/assets/images/base-octocat.svg)
