--- a/2.md
+++ b/2.md
@@ -1,12 +1,12 @@
 # heading levels
 ## heading levels 2
 
-** Bold Text **
-_Italic text_
-~~stricke text~~
-One <sub>subscript</sub>
-One <sup>superscript</sup>
-<ins>underlined</ins>
+** Bold Text **</br>
+_Italic text_</br>
+~~stricke text~~</br>
+One <sub>subscript</sub></br>
+One <sup>superscript</sup></br>
+<ins>underlined</ins></br>
 >This is a quoted text (Reffered as note)
 
 Text with link:</br>
