--- a/2.md
+++ b/2.md
@@ -14,3 +14,35 @@ Login to [Microsoft Azure](https://portal.azure.com/). You can perform all actio
 
 Image test:
 ![Alernate name for image](https://myoctocat.com/assets/images/base-octocat.svg)
+![jpg image]()
+![png image]()
+
+Unordered list:</br>
+- One
+* two
++ three
+
+Ordered List: </br>
+1 One
+2 Two
+3 Three
+
+Nested List: </br>
+1. Item One
+   -Nested item 1
+    -Nested item 2
+
+> [!NOTE]
+> Useful information that users should know, even when skimming content.
+
+> [!TIP]
+> Helpful advice for doing things better or more easily.
+
+> [!IMPORTANT]
+> Key information users need to know to achieve their goal.
+
+> [!WARNING]
+> Urgent info that needs immediate user attention to avoid problems.
+
+> [!CAUTION]
+> Advises about risks or negative outcomes of certain actions.
