--- a/2.md
+++ b/2.md
@@ -23,12 +23,12 @@ Unordered list:</br>
 + three
 
 Ordered List: </br>
-1 One
-2 Two
-3 Three
+1 One</br>
+2 Two</br>
+3 Three</br>
 
 Nested List: </br>
-1. Item One
+1 Item One
    -Nested item 1
     -Nested item 2
 
