--- a/1.md
+++ b/1.md
@@ -463,3 +463,58 @@ Color test
 <span style="color: Pink"> QA Test </span>
 <span style="color: red"> QA Test </span>
 <h6>QA Test</h6>
+
+Basic test
+# heading levels
+## heading levels 2
+
+** Bold Text **</br>
+_Italic text_</br>
+~~stricke text~~</br>
+One <sub>subscript</sub></br>
+One <sup>superscript</sup></br>
+<ins>underlined</ins></br>
+>This is a quoted text (Reffered as note)
+
+Text with link:</br>
+Login to [Microsoft Azure](https://portal.azure.com/). You can perform all actions.
+
+Text with Hyperlink: </br>
+Here is a link to the [Introduction](#introduction) section.
+
+Image test:
+![Alernate name for image](https://myoctocat.com/assets/images/base-octocat.svg)
+![jpg image]()
+![png image]()
+
+Unordered list:</br>
+- One
+* two
++ three
+
+# introduction
+
+Ordered List: </br>
+1 One</br>
+2 Two</br>
+3 Three</br>
+
+Nested List: </br>
+1 Item One
+   -Nested item 1
+    -Nested item 2
+
+> [!NOTE]
+> Useful information that users should know, even when skimming content.
+
+> [!TIP]
+> Helpful advice for doing things better or more easily.
+
+> [!IMPORTANT]
+> Key information users need to know to achieve their goal.
+
+> [!WARNING]
+> Urgent info that needs immediate user attention to avoid problems.
+
+> [!CAUTION]
+> Advises about risks or negative outcomes of certain actions.
