--- a/2.md
+++ b/2.md
@@ -17,7 +17,7 @@ Here is a link to the [Introduction](#introduction) section.
 
 Image test:
 ![Alernate name for image](https://myoctocat.com/assets/images/base-octocat.svg)
-![jpg image]()
+![jpg image](https://github.com/user-attachments/assets/2ea3216f-89df-46bf-9fef-e87497036b75)
 ![png image]()
 
 Unordered list:</br>
