--- a/2.md
+++ b/2.md
@@ -18,7 +18,8 @@ Here is a link to the [Introduction](#introduction) section.
 Image test:
 ![Alernate name for image](https://myoctocat.com/assets/images/base-octocat.svg)</br>
 ![jpg image](https://github.com/user-attachments/assets/2ea3216f-89df-46bf-9fef-e87497036b75)
-![png image](https://www.freepik.com/free-photo/3d-circle-target-board-with-darts-bullseye_33309544.htm#fromView=keyword&page=1&position=6&uuid=aa777bc6-6e95-411e-a6d1-4462a1fb24a0&query=Png)
+![png image](https://github.com/user-attachments/assets/19fd951e-2ea8-49a1-a2cb-e81b0879df63)
+
 
 Unordered list:</br>
 - One
