--- a/2.md
+++ b/2.md
@@ -20,6 +20,8 @@ Image test:
 ![jpg image](https://github.com/user-attachments/assets/2ea3216f-89df-46bf-9fef-e87497036b75)
 ![png image](https://github.com/user-attachments/assets/19fd951e-2ea8-49a1-a2cb-e81b0879df63)
 
+Drag and drop image
+![image test](https://github.com/user-attachments/assets/7ae61487-60fc-4fd1-ac01-fa5c1daf3df7)
 
 Unordered list:</br>
 - One
