--- a/1.md
+++ b/1.md
@@ -485,7 +485,10 @@ Here is a link to the [Introduction](#introduction) section.
 Image test:
 ![Alernate name for image](https://myoctocat.com/assets/images/base-octocat.svg)
 ![jpg image]()
-![png image]()
+![png image](https://github.com/user-attachments/assets/19fd951e-2ea8-49a1-a2cb-e81b0879df63)
+
+Drag and drop image
+![image test](https://github.com/user-attachments/assets/7ae61487-60fc-4fd1-ac01-fa5c1daf3df7)
 
 Unordered list:</br>
 - One
