--- a/1.md
+++ b/1.md
@@ -457,7 +457,7 @@ Video by Engin Akyurt from Pexels: https://www.pexels.com/video/beauty-of-waterf
 
 https://github.com/user-attachments/assets/86dc9042-61c3-4587-9653-679d3ea7b02c
 
-<iframe src="https://player.vimeo.com/video/1051660334?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media" style="position:absolute;top:0;left:0;width:50%;height:50%;" title="Impossible Choices"></iframe>
+<iframe src="https://player.vimeo.com/video/1051660334?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media" title="Impossible Choices"></iframe>
 
 https://github.com/user-attachments/assets/7103fd53-6b19-4b5f-92d3-76992646dec8
 
