--- a/1.md
+++ b/1.md
@@ -428,12 +428,9 @@ Invalid Key and Valid value
 [Link Text](https://example.com/)
 
 
-PNG Image - Not Working
 
 ![ClipWindowsGIF](https://github.com/bonzz/testguide/assets/76195593/5a83c32d-1e47-4eb2-897a-ffa18ed816a2)
 
-JPG Image - Not Working
-PEXEL Images - NOT Working
 ![ClipWindowsGIF](https://giphy.com/gifs/tv2norge-dance-celebration-birthday-duNowzaVje6Di3hnOu)
 https://giphy.com/gifs/tv2norge-dance-celebration-birthday-duNowzaVje6Di3hnOu
 
@@ -441,27 +438,17 @@ https://giphy.com/gifs/tv2norge-dance-celebration-birthday-duNowzaVje6Di3hnOu
 
 ![image](https://github.com/user-attachments/assets/06fb8a60-d1dd-4243-a7e3-1da641cb3dee)
 
-
-https://github.com/user-attachments/assets/8de9818c-3e30-41ef-92d9-70ca19e380e6
-
-
 [![Watch the video](https://img.youtube.com/vi/T-D1KVIuvjA/maxresdefault.jpg)](https://youtu.be/T-D1KVIuvjA)
-
-Video by Engin Akyurt from Pexels: https://www.pexels.com/video/beauty-of-waterfalls-2098989/
 
 <iframe width="640" height="360" src="https://vimeo.com/834416286/21ab2df4f3"></iframe>
 
 <iframe width="640" height="360" src="https://www.youtube.com/embed/6ysKXydT8xY"></iframe>
 
 
-
-https://github.com/user-attachments/assets/86dc9042-61c3-4587-9653-679d3ea7b02c
-
 <iframe src="https://player.vimeo.com/video/1051660334?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media" title="Impossible Choices"></iframe>
 
+drag and drop video - not working
 https://github.com/user-attachments/assets/7103fd53-6b19-4b5f-92d3-76992646dec8
-
-
 
 Emoji test - 🐘🐧
 
