--- a/1.md
+++ b/1.md
@@ -393,6 +393,69 @@ Enable Copy - False -----------------
 https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.istockphoto.com%2Fphotos%2Fnature&psig=AOvVaw06TzaQHiuxybkRlLJLvfxo&ust=1739343936597000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCMiox56Hu4sDFQAAAAAdAAAAABAE
 ```
 
+**Basic test**
+# heading levels
+## heading levels 2
+
+** Bold Text **</br>
+_Italic text_</br>
+~~stricke text~~</br>
+One <sub>subscript</sub></br>
+One <sup>superscript</sup></br>
+<ins>underlined</ins></br>
+>This is a quoted text (Reffered as note)
+
+Text with link:</br>
+Login to [Microsoft Azure](https://portal.azure.com/). You can perform all actions.
+
+Text with Hyperlink: </br>
+Here is a link to the [Introduction](#introduction) section.
+
+Image test:
+![Alernate name for image](https://myoctocat.com/assets/images/base-octocat.svg)</br>
+![jpg image](https://github.com/user-attachments/assets/2ea3216f-89df-46bf-9fef-e87497036b75)
+![png image](https://github.com/user-attachments/assets/19fd951e-2ea8-49a1-a2cb-e81b0879df63)
+
+Drag and drop image
+![image test](https://github.com/user-attachments/assets/7ae61487-60fc-4fd1-ac01-fa5c1daf3df7)
+
+Video test:
+<iframe width="640" height="360" src="https://vimeo.com/834416286/21ab2df4f3"></iframe>
+
+
+Unordered list:</br>
+- One
+* two
++ three
+
+# introduction
+
+Ordered List: </br>
+1 One</br>
+2 Two</br>
+3 Three</br>
+
+Nested List: </br>
+1 Item One
+   -Nested item 1
+    -Nested item 2
+
+> [!NOTE]
+> Useful information that users should know, even when skimming content.
+
+> [!TIP]
+> Helpful advice for doing things better or more easily.
+
+> [!IMPORTANT]
+> Key information users need to know to achieve their goal.
+
+> [!WARNING]
+> Urgent info that needs immediate user attention to avoid problems.
+
+> [!CAUTION]
+> Advises about risks or negative outcomes of certain actions.
+
+
 **OutputParams and Inject Keys check Priya**
 Valid Key and Value
 ```
