--- a/1.md
+++ b/1.md
@@ -215,7 +215,30 @@ PNG image
 
 Video about selenium
 
-<iframe width="640" height="360" src="https://www.youtube.com/watch?v=cc26zFE8X1k" title="Selenium" - Cool Music" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Test Video</title>
+</head>
+<body>
+<h1>Watch the Video</h1>
+
+    <!-- Video tag for rendering video from local storage -->
+<video width="640" height="360" controls>
+<!-- Reference to local video file -->
+Go and add the required video in your Git Local storage...
+
+
+
+<source src="https://www.youtube.com/watch?v=cc26zFE8X1k" type="video/mp4">
+<!-- Fallback message in case the browser doesn't support the video tag -->
+        Your browser does not support the video tag.
+</video>
+
+</body>
+</html>
 
 
 ---------------------------------------------------------------------
