--- a/1.md
+++ b/1.md
@@ -423,5 +423,7 @@ https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.istockphoto.com%2Fphotos%2
  **checkNNumber:** <inject key="testKey2" value="StaticValue2" />
 
 * **checkNNumber:** <inject key="AzureAdUserPassword" value="StaticValue3" />
+* **checkNNumber:** <inject key="AzureAdUserPassword" value="example@example.com" />
+
 
 
