--- a/1.md
+++ b/1.md
@@ -429,6 +429,8 @@ https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.istockphoto.com%2Fphotos%2
 * **checkNNumber:** <inject key="AzureAdUserEmail" value="" />
 * **checkNNumber:** <inject key="Inv" value="lid" />
 
+* **checkNNumber:** <inject key="invalid" value="example@example.com" />
+
 
 
 
