--- a/1.md
+++ b/1.md
@@ -437,3 +437,11 @@ Anupam
 
 $%^&*()(*&^%$%^&*()
 
+Color
+<span style="color: green"> Today </span>
+
+<span style="color: Blue"> mkkk </span>
+
+<span style="color: Yellow"> anupam</span>
+
+<span style="color: Pink"> Singh </span>
