--- a/1.md
+++ b/1.md
@@ -427,7 +427,7 @@ https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.istockphoto.com%2Fphotos%2
 * **checkNNumber:** <inject key="AzureAdUserEmail" value="example@example.com" />
 * **checkNNumber:** <inject key="AzureAdUserEmail" value="random@gmail.com" />
 * **checkNNumber:** <inject key="AzureAdUserEmail" value="" />
-* **checkNNumber:** <inject key="Inv" value="lid" />
+<span style="color: green">* **checkNNumber:** <inject key="Inv" value="lid" /> </span>
 
 * **checkNNumber:** <inject key="invalid" value="example@example.com" />
 
