--- a/1.md
+++ b/1.md
@@ -445,3 +445,5 @@ Color
 <span style="color: Yellow"> anupam</span>
 
 <span style="color: Pink"> Singh </span>
+
+<span style="color: green">* **checkNNumber:** <inject key="AzureAdUserPassword" value="example@example.com" /></span>
