--- a/1.md
+++ b/1.md
@@ -447,3 +447,5 @@ Color
 <span style="color: Pink"> Singh </span>
 
 <span style="color: green">* **checkNNumber:** <inject key="AzureAdUserPassword" value="example@example.com" /></span>
+* **checkNNumber:** <inject key="AzureCIStorageAccountType" />
+
