--- a/1.md
+++ b/1.md
@@ -449,3 +449,8 @@ Color
 <span style="color: green">* **checkNNumber:** <inject key="AzureAdUserPassword" value="example@example.com" /></span>
 * **checkNNumber:** <inject key="AzureCIStorageAccountType" />
 
+🐰
+🐘
+![image](https://github.com/user-attachments/assets/99e6327a-570d-4e51-9275-f97492b407d0)
+
+
