--- a/1.md
+++ b/1.md
@@ -454,3 +454,8 @@ Color
 ![image](https://github.com/user-attachments/assets/99e6327a-570d-4e51-9275-f97492b407d0)
 https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExMHF0bTRqY253NngxNWp6b3RpMms4ZncxMW81ajJ5MG1ncjNqeW40bSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/oNBiZZROJFrDpFErCe/giphy.gif
 
+![image](https://github.com/user-attachments/assets/4b7c5ae1-c4eb-4442-bdc0-3a2ffad3aa7a)
+
+![image](https://github.com/user-attachments/assets/3f93291b-b35a-4078-9d98-e2be26097c98)
+
+![image](https://github.com/user-attachments/assets/7b44ea48-4e41-458c-bf0e-139068cb4b99)
