--- a/1.md
+++ b/1.md
@@ -467,3 +467,6 @@ https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.istockphoto.com%2Fphotos%2
 
 
 ```` anupam don't copy me`````
+
+*italic*
+**bold**
