--- a/1.md
+++ b/1.md
@@ -466,7 +466,14 @@ https://www.youtube.com/watch?v=5abffC-K40c
 https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.istockphoto.com%2Fphotos%2Fnature&psig=AOvVaw06TzaQHiuxybkRlLJLvfxo&ust=1739343936597000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCMiox56Hu4sDFQAAAAAdAAAAABAE
 
 
-```` anupam don't copy me`````
+````
+anupam don't copy me
+```
+
+
+````
+anupam don't copy me
+
 
 *italic*
 **bold**
