--- a/1.md
+++ b/1.md
@@ -418,7 +418,7 @@ https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.istockphoto.com%2Fphotos%2
 ```ast```
 **Verifying Static Value and key :**
 
-* **checkNNumber:** <inject key="testKey2" value="StaticValue2" key="testkay1"  value="StaticValue1" />
+* **checkNNumber:** <inject key="testKey2" value="StaticValue2"  />
 
  **checkNNumber:** <inject key="testKey2" value="StaticValue2" />
 
@@ -477,3 +477,20 @@ anupam don't copy me
 
 *italic*
 **bold**
+
+
+
+```
+Valid Inject key Anupam
+<inject key="AzureAdUserEmail" defaultvalue="Anupam@example.com">
+```
+ 
+```
+Valid Inject Key without default value Anupam
+<inject key="AzureAdUserEmail" defaultvalue="">
+```
+
+```
+Invalid Inject Key with default value 
+<inject key="AzureEmail" defaultvalue="Anupam@example.com">
+```
