--- a/1.md
+++ b/1.md
@@ -494,3 +494,4 @@ Valid Inject Key without default value Anupam
 Invalid Inject Key with default value 
 <inject key="AzureEmail" defaultvalue="Anupam@example.com">
 ```
+<inject key="keyname" value="-Dashboard" cloudname="Microsoft Azure" enableCopy="true" enableClickToPaste="false" defaultValue="old-user-123" />
