--- a/1.md
+++ b/1.md
@@ -511,6 +511,11 @@ Invalid Inject Key with default value
 <inject key="AzureEmail" defaultvalue="Anupam@example.com">
 ```
 
+```
+Invalid Inject Key with Invalid value 
+<inject key="AzureEmail" defaultvalue="Invalid@gmail.com">
+```
+
 
 
 
