--- a/1.md
+++ b/1.md
@@ -516,6 +516,11 @@ Invalid Inject Key with Invalid value
 <inject key="AzureEmail" defaultvalue="Invalid@gmail.com">
 ```
 
+```
+Invalid Inject Key with default value 
+<inject key="AzureEmail" defaultvalue="Anupam@example.com">
+```
+
 
 
 
