--- a/1.md
+++ b/1.md
@@ -521,6 +521,11 @@ Invalid Inject Key with default value
 <inject key="AzureEmail" defaultvalue="Anupam@example.com">
 ```
 
+```
+No Key with No Value 
+<inject key="" defaultvalue="">
+```
+
 
 
 
