--- a/1.md
+++ b/1.md
@@ -507,7 +507,7 @@ Valid Inject Key with No Value
 <inject key="AzureAdUserEmail" defaultvalue="">
 ```
 ```
-Invalid Inject Key with No Value
+Invalid Inject Key with Value
 <inject key="AzureEmail" defaultvalue="Anupam@example.com">
 ```
 
