--- a/1.md
+++ b/1.md
@@ -526,6 +526,14 @@ No Key with No Value
 <inject key="" defaultvalue="">
 ```
 
+```
+Inject key with special characters 
+<inject key="#AzureAdUserEmail#" defaultvalue="">
+```
 
+```
+Inject key with numbers and negative value  
+<inject key="-373AzureAdUserEmail536" defaultvalue="">
+```
 
 
