--- a/1.md
+++ b/1.md
@@ -538,6 +538,33 @@ Inject key with numbers and negative value
 Normal content Text in Lab Guide Normal content Text in Lab Guide Normal content Text in Lab Guide Normal content Text in Lab Guide Normal content Text in Lab Guide Normal content Text in Lab Guide Normal content Text in Lab Guide Normal content Text in Lab Guide Normal content Text in Lab Guide
 
 
-**Hyperlink**
-computing
- Hypertext
+**Link**
+https://github.com/bonzz/testguide/edit/main/1.md
+https://www.google.com/
+
+**Image**
+Different Format - 
+
+PNG
+![image](https://github.com/user-attachments/assets/ff03a60b-f1d0-4b47-aaf8-aa94d2ad1f99)
+
+AVIF - image type
+![image](https://github.com/user-attachments/assets/f5f25b25-89fa-47b7-a0e4-3256a95d8126)
+
+Jfif
+![image](https://github.com/user-attachments/assets/2f07a3b4-c07c-4ec1-90b2-0901e80d4962)
+
+Jpg
+![image](https://github.com/user-attachments/assets/1e8ad735-b3eb-4242-848d-8d45e73f1a0a)
+
+SVG
+![image](https://github.com/user-attachments/assets/7f1e8703-fd93-412d-aa0a-21dcc078138d)
+
+Jpeg
+![Anupam_pic_new](https://github.com/user-attachments/assets/b8ed0600-22ac-4427-b5d5-8c6b290dce32)
+
+
+
+
+
+
