--- a/1.md
+++ b/1.md
@@ -560,8 +560,20 @@ Jpg
 SVG
 ![image](https://github.com/user-attachments/assets/7f1e8703-fd93-412d-aa0a-21dcc078138d)
 
+Color Your Eye Test !!
 
+<span style="color: green"> lab Guide </span>
+<span style="color: Blue"> test Pass </span>
+<span style="color: Yellow"> on today </span>
+<span style="color: Pink"> without fail</span>
+<span style="color: black"> 05 December</span>
+<span style="color: red"> last month of 2024</span>
 
+Adding color for inject key
+```
+Invalid Inject Key with Invalid value 
+<span style="color: Red"> <inject key="AzureEmail" defaultvalue="Anupam@example.com"> </span>
+```
 
 
 
