--- a/1.md
+++ b/1.md
@@ -574,7 +574,16 @@ Adding color for inject key
 Invalid Inject Key with Invalid value 
 <span style="color: Red"> <inject key="AzureEmail" defaultvalue="Anupam@example.com"> </span>
 ```
+Adding Emoji
+🧆
+🍱
+🍜
 
+
+Adding gif
+https://media1.tenor.com/m/OTtSnexFUcwAAAAC/junk-food-unhealthy.gif
+
+https://media1.tenor.com/m/waC6qhecVNAAAAAd/jack-in-the-box-fast-food.gif
 
 
 
