--- a/1.md
+++ b/1.md
@@ -585,5 +585,11 @@ https://media1.tenor.com/m/OTtSnexFUcwAAAAC/junk-food-unhealthy.gif
 
 https://media1.tenor.com/m/waC6qhecVNAAAAAd/jack-in-the-box-fast-food.gif
 
+Adding Link inside Code Block
+```
+https://github.com/bonzz/testguide/edit/main/1.md
+https://tenor.com/view/jack-in-the-box-fast-food-food-gif-13952356885297124560
+https://experience-qa-v2.cloudlabs.ai/#/odl/labguide/96fb47a1-b637-49d4-bf47-f6248b0a7be6/c07b11cd-42a0-43a2-a34f-a4f2bae5b2df/1
+```
 
 
