--- a/1.md
+++ b/1.md
@@ -569,11 +569,7 @@ Color Your Eye Test !!
 <span style="color: black"> 05 December</span>
 <span style="color: red"> last month of 2024</span>
 
-Adding color for inject key
-```
-Invalid Inject Key with Invalid value 
-<span style="color: Red"> <inject key="AzureEmail" defaultvalue="Anupam@example.com"> </span>
-```
+
 Adding Emoji
 🧆
 🍱
@@ -591,5 +587,8 @@ https://github.com/bonzz/testguide/edit/main/1.md
 https://tenor.com/view/jack-in-the-box-fast-food-food-gif-13952356885297124560
 https://experience-qa-v2.cloudlabs.ai/#/odl/labguide/96fb47a1-b637-49d4-bf47-f6248b0a7be6/c07b11cd-42a0-43a2-a34f-a4f2bae5b2df/1
 ```
+adding gif new
+![image](https://github.com/user-attachments/assets/e9d5e6b5-7141-41c2-bfd9-b4a19d0b3759)
 
+![image](https://github.com/user-attachments/assets/bc22af83-ffff-43a0-90c6-3d2c8602ce9b)
 
