--- a/1.md
+++ b/1.md
@@ -600,3 +600,8 @@ Different format of Text
 **Bold**
 
 _Italic_
+
+
+https://media1.tenor.com/m/5L12vz4KkikAAAAC/really-jack-in-the-box.gif
+
+Video - https://www.google.com/search?sca_esv=017810d95fc5d12f&q=Azure+shot+video&udm=39&fbs=ABzOT_CWdhQLP1FcmU5B0fn3xuWp6IcynRBrzjy_vjxR0KoDMnbkfvm4jW0eza52i_Pv0GH8kQLzw_tSVhAdOi8ZE2uVKxEWinLVZBoDQNS_-Xzyw5WLP046iuErMk9lQ4YSZ9xeQ5Ui5qww6OYd1XDUBV4wQpTpaOCx5EVXuKYUhqLV7Z6Z7Hf3D1q8l_D3J3BNusnpToxWYEDvX4LjBcYoAFWUJduMMQ&sa=X&ved=2ahUKEwiTobSHv_KMAxUk2TgGHRFVIZMQs6gLegQIGRAB&biw=1272&bih=602&dpr=1.5
